# cc-haendlerspiel-backend-rs

./: Cargo.toml  net_traffic.md  run.bat  users.md
src/: main.rs
src/game/: config.rs  game_instance.rs  game_server.rs  mod.rs  permission_level.rs
src/game/net/: manager.rs  mod.rs  receiver.rs  sender.rs
src/game/net/packet/: encryption.rs  handshake_packet.rs  login.rs  mod.rs  ping.rs  ping_packets.rs  serial.rs
