[package]
name = "haendler-backend"
version = "0.1.0"
authors = ["ColiBarn20"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
byteorder = "1.3"
num-traits = "0.2"
num-derive = "0.3"
openssl = "0.10"
openssl-sys = "0.9"