[package]
name = "haendler-backend"
version = "0.1.0"
authors = ["ColiBarn20"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
byteorder = "1.3"
num-traits = "0.2"
num-derive = "0.3"
tokio-rustls = "0.14"
serde = "1.0"
toml = "0.5"
structopt = "0.3"
rayon = "1.3"